[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }



tracing = "0.1"
tracing-subscriber = "0.3"

common = { path = "../common" }
queue = { path = "../queue" }
storage = { path = "../storage" }
types = { path = "../types" }
axum = "0.8.9"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres"
] }

uuid = { version = "1", features = ["v4", "serde"] }

chrono = { version = "0.4", features = ["serde"] }
